Added google login

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.kevin.fifastatistics.MainFragment">
+    tools:context="com.example.kevin.fifastatistics.MainFragment"
+    android:paddingTop="?attr/actionBarSize">
 
     <Button
         android:layout_width="wrap_content"
@@ -13,7 +14,6 @@
         android:background="@color/colorPrimary"
         android:textSize="28sp"
         android:id="@+id/textView"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
