--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="190dp"
     android:background="@drawable/side_nav_bar"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
