--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="190dp"
+    android:layout_height="175dp"
     android:background="@drawable/side_nav_bar"
     android:orientation="vertical">
 
@@ -14,7 +14,7 @@
         app:civ_border_width="2dp"
         app:civ_border_color="#FFFFFF"
         android:layout_marginLeft="24dp"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="38dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="24dp" />
