--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,8 +5,6 @@
         android:id="@+id/action_search"
         android:orderInCategory="200"
         android:title="Search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="ifRoom"
-        android:visible="false"/>
+        android:icon="@drawable/ic_action_action_search"
+        app:showAsAction="always" />
 </menu>
