--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,7 +4,14 @@
     <item
         android:id="@+id/action_search"
         android:orderInCategory="200"
-        android:title="Search"
+        android:title="@string/menuItem_search"
         android:icon="@drawable/ic_action_action_search"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/friend_requests"
+        android:orderInCategory="100"
+        android:title="@string/menuItem_requests"
+        android:icon="@drawable/ic_person_white_24dp"
+        app:showAsAction="ifRoom" />
+
 </menu>
