--- a/app/src/main/res/layout/fragment_friends_list.xml
+++ b/app/src/main/res/layout/fragment_friends_list.xml
@@ -8,7 +8,8 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    android:paddingTop="?attr/actionBarSize"
     app:layoutManager="LinearLayoutManager"
     tools:context=".fragments.friendsfragment.FriendsFragment"
     tools:listitem="@layout/fragment_friends" />
+
+    <!--android:paddingTop="?attr/actionBarSize"-->
