Added animation to friends fragment load

--- a/app/src/main/res/layout/fragment_friends_list.xml
+++ b/app/src/main/res/layout/fragment_friends_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.example.kevin.fifastatistics.views.GridRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
     android:name="com.example.kevin.fifastatistics.FriendsFragment"
@@ -8,8 +7,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
+    android:layoutAnimation="@anim/grid_layout_animation"
     tools:context=".fragments.FriendsFragment"
     tools:listitem="@layout/fragment_friends" />
-
     <!--android:paddingTop="?attr/actionBarSize"-->
