--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-
     <dimen name="g_top_margin">100dp</dimen>
+
+    <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="civ_border_width">4dp</dimen>
 </resources>
