Prevent the stats chart from automatically focusing

--- a/app/src/main/res/layout/fragment_user_overview.xml
+++ b/app/src/main/res/layout/fragment_user_overview.xml
@@ -8,7 +8,8 @@
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:gravity="center_horizontal">
+                  android:gravity="center_horizontal"
+                  android:descendantFocusability="blocksDescendants">
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
