--- a/app/src/main/res/layouts/useroverview/layout/user_overview_data.xml
+++ b/app/src/main/res/layouts/useroverview/layout/user_overview_data.xml
@@ -5,6 +5,8 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <include layout="@layout/records_card_view" />
+
     <include layout="@layout/card_view_pager" />
 
 </LinearLayout>
