--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,8 +9,16 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="g_top_margin">100dp</dimen>
 
-    <dimen name="card_corner_radius">4dp</dimen>
     <dimen name="civ_border_width">4dp</dimen>
 
     <dimen name="stats_list_item_height">60dp</dimen>
+
+    <!-- Card view properties -->
+    <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="card_header_height">40dp</dimen>
+    <dimen name="card_header_text_size">20sp</dimen>
+
+    <!-- Records Card View -->
+    <dimen name="record_value_item_height">50dp</dimen>
+
 </resources>
