--- a/app/src/main/res/layouts/shared/layout/card_view_header.xml
+++ b/app/src/main/res/layouts/shared/layout/card_view_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/card_header_height"
-    android:backgroundTint="@color/cardViewHeaderBackground">
+    android:background="@color/cardViewHeaderBackground">
 
     <TextView
         android:id="@+id/header_text"
@@ -11,6 +11,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:gravity="center_vertical"
         android:textSize="@dimen/card_header_text_size"/>
 
 </LinearLayout>
