--- a/app/src/main/res/layouts/useroverview/layout/records_set_item.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_set_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="90dp">
+                android:layout_height="105dp">
                 <!-- height = card_header_height + record_item_body.height -->
 
     <include
@@ -9,6 +9,7 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="@dimen/card_header_height"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentTop="true">
     </include>
 
@@ -18,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/record_value_item_height"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_below="@id/header">
     </include>
 
@@ -36,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/record_value_item_height"
         android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_below="@id/header">
     </include>
 
