--- a/app/src/main/res/layouts/useroverview/layout/records_value_item.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_value_item.xml
@@ -9,13 +9,14 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:gravity="center"
-        android:textColor="@color/white"/>
+        android:layout_gravity="center"
+        android:textColor="@color/white"
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
-        android:layout_marginTop="5dp"
         android:gravity="center"/>
 
 </LinearLayout>
