--- a/app/src/main/res/layouts/shared/layout/card_view_header.xml
+++ b/app/src/main/res/layouts/shared/layout/card_view_header.xml
@@ -2,16 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/card_header_height"
+    android:orientation="horizontal"
     android:background="@color/cardViewHeaderBackground">
 
     <TextView
-        android:id="@+id/header_text"
-        android:layout_width="match_parent"
+        android:id="@+id/header_left_text"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="0.5"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:gravity="center_vertical"
+        android:textSize="@dimen/card_header_text_size"/>
+
+    <TextView
+        android:id="@+id/header_right_text"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:gravity="center_vertical|right"
         android:textSize="@dimen/card_header_text_size"/>
 
 </LinearLayout>
