--- a/app/src/main/res/layouts/useroverview/layout/user_overview_data.xml
+++ b/app/src/main/res/layouts/useroverview/layout/user_overview_data.xml
@@ -5,6 +5,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="Records"/>
+
     <include layout="@layout/records_card_view" />
 
     <include layout="@layout/card_view_pager" />
