--- a/app/src/main/res/layouts/useroverview/layout/user_overview_data.xml
+++ b/app/src/main/res/layouts/useroverview/layout/user_overview_data.xml
@@ -9,9 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="25dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="Records"/>
 
     <include layout="@layout/records_card_view" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:text="Stats"/>
 
     <include layout="@layout/card_view_pager" />
 
