--- a/app/src/main/res/layouts/useroverview/layout/stats_list_view_layout.xml
+++ b/app/src/main/res/layouts/useroverview/layout/stats_list_view_layout.xml
@@ -8,9 +8,8 @@
         android:id="@+id/stats_chart_title"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
         android:textSize="15sp"
         android:textStyle="bold"/>
 
