--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <color name="colorPrimary">#262523</color>
     <color name="colorPrimaryDark">#181715</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#b2ff59</color>
     <color name="blue">#3F51B5</color>
     <color name="white">#FFFFFF</color>
     <color name="background">#212121</color>
