--- a/app/src/main/res/layouts/useroverview/layout/user_overview_data.xml
+++ b/app/src/main/res/layouts/useroverview/layout/user_overview_data.xml
@@ -1,26 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.example.kevin.fifastatistics.views.UserOverview xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/useroverviewdata"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="Records"/>
-
-    <include layout="@layout/records_card_view" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="Stats"/>
-
-    <include layout="@layout/card_view_pager" />
-
-</LinearLayout>
+</com.example.kevin.fifastatistics.views.UserOverview>
