--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="blue">#3F51B5</color>
     <color name="white">#FFFFFF</color>
     <color name="background">#212121</color>
+    <color name="transparent">#00000000</color>
 
     <!-- Card view colors -->
     <color name="cardViewBackground">#262523</color>
