--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="g_top_margin">100dp</dimen>
 
+    <dimen name="toolbar_height">48dp</dimen>
+
     <dimen name="civ_border_width">4dp</dimen>
 
     <dimen name="stats_list_item_height">60dp</dimen>
@@ -20,5 +22,10 @@
 
     <!-- Records Card View -->
     <dimen name="record_value_item_height">50dp</dimen>
+
+    <!-- PLAYER ACTIVITY -->
+    <dimen name="user_image_height">100dp</dimen>
+    <dimen name="player_image_width">100dp</dimen>
+    <dimen name="player_image_small_width">32dp</dimen>
 
 </resources>
