--- a/app/src/main/res/layouts/activities/layout/activity_player.xml
+++ b/app/src/main/res/layouts/activities/layout/activity_player.xml
@@ -19,6 +19,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fab="http://schemas.android.com/tools"
     android:background="@color/colorPrimaryDark">
 
     <android.support.v4.view.ViewPager
@@ -54,13 +55,6 @@
             app:tabMode="scrollable"/>
     </me.henrytao.smoothappbarlayout.SmoothAppBarLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_black_24dp"
-        app:layout_anchor="@id/smooth_app_bar_layout"
-        app:layout_anchorGravity="bottom|right|end"
-        />
+    <include layout="@layout/floating_action_menu"/>
 
 </android.support.design.widget.CoordinatorLayout>
