--- a/app/src/main/res/layouts/fragments/layout/fragment_friends.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_friends.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.kevin.fifastatistics.views.GridRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
     android:name="com.example.kevin.fifastatistics.FriendsFragment"
