--- a/app/src/main/res/layouts/activities/layout/activity_player.xml
+++ b/app/src/main/res/layouts/activities/layout/activity_player.xml
@@ -22,38 +22,44 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <me.henrytao.smoothappbarlayout.SmoothAppBarLayout
-        android:id="@+id/smooth_app_bar_layout"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="@dimen/toolbar_height">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar_layout"
+            android:id="@+id/collapsingtoolbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_bar_height"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|snap">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:background="@android:color/transparent"
-                app:layout_collapseMode="pin"
+            <include
+                layout="@layout/toolbar_profile_image"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"/>
+                android:layout_height="?attr/actionBarSize">
+            </include>
+
         </android.support.design.widget.CollapsingToolbarLayout>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:layout_gravity="bottom"
-            app:tabMode="scrollable"/>
-    </me.henrytao.smoothappbarlayout.SmoothAppBarLayout>
+            android:visibility="visible"
+            android:animateLayoutChanges="true"
+            app:tabMode="scrollable" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/fab_menu"
