--- a/app/src/main/res/layouts/fragments/layout/fragment_add_match.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_add_match.xml
@@ -26,6 +26,13 @@
             android:contentDescription="Done"/>
 
         <ImageButton
+            android:id="@+id/button_autofill"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_swap_horiz_white_24dp"
+            android:background="?attr/selectableItemBackgroundBorderless"/>
+
+        <ImageButton
             android:id="@+id/camera_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,6 +41,8 @@
             android:src="@drawable/ic_camera_alt_white_24dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="Camera"/>
+
+
 
     </android.support.v7.widget.Toolbar>
 
