--- a/app/src/main/res/layouts/shared/layout/activity_create_series.xml
+++ b/app/src/main/res/layouts/shared/layout/activity_create_series.xml
@@ -19,11 +19,11 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-
-    <ListView
+    
+    <FrameLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-    </ListView>
+    </FrameLayout>
 
 </LinearLayout>
