--- a/app/src/main/res/layouts/shared/layout/fragment_create_series_match_list.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_create_series_match_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -9,12 +10,27 @@
             type="com.example.kevin.fifastatistics.viewmodel.CreateSeriesMatchListViewModel"/>
     </data>
 
-    <ListView
-        android:id="@+id/list_matches"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:onItemClickListener="@{listViewModel::onItemClick}"
-        app:items="@{listViewModel.items}"
-        app:itemView="@{listViewModel.itemView}"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <include
+            layout="@layout/create_series_score_summary"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/create_series_score_summary_size"
+            bind:seriesSummaryViewModel="@{listViewModel.seriesScoreViewModel}"/>
+
+        <ListView
+            android:id="@+id/list_matches"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onItemClickListener="@{listViewModel::onItemClick}"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            app:items="@{listViewModel.items}"
+            app:itemView="@{listViewModel.itemView}"/>
+
+    </LinearLayout>
 
 </layout>
