--- a/app/src/main/res/layouts/shared/layout/fragment_create_series_match_list.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_create_series_match_list.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="listViewModel"
-            type="com.example.kevin.fifastatistics.viewmodel.CreateSeriesMatchListViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.CreateSeriesMatchListViewModel"/>
     </data>
 
     <LinearLayout
