--- a/app/src/main/res/layouts/shared/layout/item_create_series_match_list.xml
+++ b/app/src/main/res/layouts/shared/layout/item_create_series_match_list.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="listItemViewModel"
-            type="com.example.kevin.fifastatistics.viewmodel.CreateSeriesListItemViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.CreateSeriesListItemViewModel"/>
     </data>
 
     <LinearLayout
