--- a/app/src/main/res/layouts/shared/layout/item_match.xml
+++ b/app/src/main/res/layouts/shared/layout/item_match.xml
@@ -4,52 +4,92 @@
     <data>
         <variable
             name="matchItemViewModel"
-            type="com.example.kevin.fifastatistics.viewmodel.MatchesItemViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.MatchesItemViewModel"/>
     </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:background="?android:attr/selectableItemBackground"
+        android:onClick="@{view -> matchItemViewModel.openMatchDetail(view)}">
 
         <TextView
+            android:id="@+id/top_name_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/match_player_margin_external"
             android:textAppearance="@style/text_small"
-            android:text="@{matchItemViewModel.startName}"/>
-
-        <RelativeLayout
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_margin="@dimen/activity_horizontal_margin"
-                android:textAppearance="@style/text_small"
-                android:text="@{matchItemViewModel.startScore}"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="@dimen/activity_horizontal_margin"
-                android:textAppearance="@style/text_small"
-                android:text="@{matchItemViewModel.endScore}"/>
-
-        </RelativeLayout>
+            android:text="@{matchItemViewModel.topName}" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_below="@id/top_name_textview"
+            android:layout_marginTop="@dimen/match_player_margin_internal"
+            android:layout_marginBottom="@dimen/match_player_margin_external"
             android:textAppearance="@style/text_small"
-            android:text="@{matchItemViewModel.endName}"/>
+            android:text="@{matchItemViewModel.bottomName}"/>
+
+        <LinearLayout
+            android:id="@+id/penalties_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="@dimen/match_score_margin_end"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginBottom="@dimen/match_player_margin_external"
+            android:layout_marginTop="@dimen/match_player_margin_external"
+            android:orientation="vertical"
+            android:visibility="@{matchItemViewModel.penaltiesVisibility}">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textAppearance="@style/text_grey_small"
+                android:text="@{matchItemViewModel.topPenalties}" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/match_player_margin_internal"
+                android:gravity="center_horizontal"
+                android:textAppearance="@style/text_grey_small"
+                android:text="@{matchItemViewModel.bottomPenalties}" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/penalties_container"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/match_player_margin_external"
+            android:layout_marginBottom="@dimen/match_player_margin_external"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textAppearance="@{matchItemViewModel.topScoreTextAppearance}"
+                android:text="@{matchItemViewModel.topScore}"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/match_player_margin_internal"
+                android:gravity="center_horizontal"
+                android:textAppearance="@{matchItemViewModel.bottomScoreTextAppearance}"
+                android:text="@{matchItemViewModel.bottomScore}"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
