--- a/app/src/main/res/layouts/shared/layout/create_series_score_summary.xml
+++ b/app/src/main/res/layouts/shared/layout/create_series_score_summary.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="seriesSummaryViewModel"
-            type="com.example.kevin.fifastatistics.viewmodel.CreateSeriesScoreViewModel"/>
+            type="com.example.kevin.fifastatistics.viewmodels.CreateSeriesScoreViewModel"/>
     </data>
 
     <RelativeLayout
