--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,6 +51,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="text_bold_white_small" parent="text_small">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="text_bold_medium" parent="text_medium">
         <item name="android:textStyle">bold</item>
     </style>
@@ -60,6 +64,10 @@
     </style>
 
     <style name="text_grey_medium" parent="text_medium">
+        <item name="android:textColor">@android:color/secondary_text_dark</item>
+    </style>
+
+    <style name="text_grey_small" parent="text_small">
         <item name="android:textColor">@android:color/secondary_text_dark</item>
     </style>
 
